--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -690,7 +690,7 @@ FProxyToadlet.pluginsTitle=Plugins
 FProxyToadlet.progressCheckingStore=Your computer is checking your local cache for this page or file. If it is not stored there, it will try to download it from Freenet.
 FProxyToadlet.lastRefresh=Last refresh was {0} ago
 FProxyToadlet.progressDownloading=Your computer is downloading this page or file from Freenet. This could take seconds or minutes depending on how big and how popular the page or file is - the more often something is accessed in Freenet, the better is its availability and download speed.
-FProxyToadlet.progressNotFinalized=The progress bar will jump around until we have downloaded enough blocks to determine the file's final size.
+FProxyToadlet.progressNotFinalized=The progress bar will jump around until we have downloaded enough blocks to determine the size of the file.
 FProxyToadlet.progressOptionZero=You can wait for the requested page. This status page will be refreshed until the file is fetched or Freenet gives up searching. Alternatively:
 FProxyToadlet.queue=manage queued requests
 FProxyToadlet.queueTitle=Downloads and uploads
