Move unused ClockProblem localization to TimeSkew.
TimeSkew is used, but ClockProblem is not. Therefore:
* In English, remove ClockProblem and update TimeSkew wording.
* In other languages move ClockProblem to TimeSkew.
    - In Japanese, use longer text from TimeSkew instead of untranslated
      ClockProblem.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -138,9 +138,6 @@ ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is a message
 ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - This unofficial guide can be very helpful in setting up these and other Freenet communication tools.
 ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
 ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (such as wikis) which one can find by browsing Freenet.
-ClockProblemDetectedUserAlert.title=Date and time problem
-ClockProblemDetectedUserAlert.text=Your computer's clock seems to be inaccurate. Freenet will not be able to connect to the network reliably. Please set your computer's clock to the correct date and time, then restart Freenet.
-ClockProblemDetectedUserAlert.shortText=Your computer's clock isn't on time, so Freenet can't connect.
 CSSTokenizerFilter.deletedDisallowedString=Deleted disallowed string
 CSSTokenizerFilter.deletedUnmatchedChar=ignored unmatched char:
 CSSTokenizerFilter.deletedUnofficialIdent=Deleted unofficial ident
@@ -2011,9 +2008,9 @@ TextModeClientInterfaceServer.ssl=Enable SSL?
 TextModeClientInterfaceServer.sslLong=Enable SSL on the TMCI server. You will need the 'Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files' for it to work.
 TextModeClientInterfaceServer.telnetPortNumber=TMCI port
 TextModeClientInterfaceServer.telnetPortNumberLong=The TCP port the TMCI server should listen on
-TimeSkewDetectedUserAlert.title=Time skew detected!
-TimeSkewDetectedUserAlert.text=A time skew has been detected by your Freenet node. That's VERY bad. Your node won't perform correctly until it's fixed; Common causes are missconfigured powersafe mode, network time synchronization clients or buggy hardware.
-TimeSkewDetectedUserAlert.shortText=A time skew has been detected by Freenet. Freenet may break in wierd ways!
+TimeSkewDetectedUserAlert.title=Wrong date and time
+TimeSkewDetectedUserAlert.text=Your computer's clock seems to be wrong. Freenet cannot connect to the network correctly. Please set your computer's clock to the correct date and time, then restart Freenet.
+TimeSkewDetectedUserAlert.shortText=Freenet cannot connect because your computer's clock is wrong.
 Toadlet.yes=Yes
 Toadlet.no=No
 Toadlet.back=Back
