--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1437,7 +1437,7 @@ PluginManager.pluginDesc.Library=Tool to search Freenet using old or new format 
 PluginManager.pluginDesc.Spider=Tool to create and automatically upload new format freesite search indexes, by automatically following links from your bookmarks. Causes very heavy load on your Freenet node, don't use it unless you have a powerful computer! Requires that the Library plugin also be loaded.
 PluginManager.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
 PluginManager.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
-PluginManager.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
+PluginManager.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Uses WebOfTrust to automatically announce your new flog so it should show up on the freesite indexes.
 PluginManager.pluginName.Freemail=Freemail v0.1 (old!)
 PluginManager.pluginName.Freemail_wot=Freemail
 PluginManager.pluginName.HelloWorld=HelloWorld
