Configurable dir for plugin stores files (not used yet).

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1213,6 +1213,8 @@ NodeClientCore.maxUSKFetchersMustBeGreaterThanZero=Must be greater than zero
 NodeClientCore.movingTempDirOnTheFlyNotSupported=Moving temp directory on the fly not supported at present
 NodeClientCore.persistentTempDir=Persistent temp files directory
 NodeClientCore.persistentTempDirLong=Path of directory to put persistent temp files in. Persistent means that this should be kept even when Freenet is not running.
+NodeClientCore.pluginStoresDir=Plugin stores folder
+NodeClientCore.pluginStoresDirLong=Path to directory to store plugins' data in. Note that not all plugins use this mechanism, some create their own files.
 NodeClientCore.maxRAMBucketSize=Maximum size of a RAMBucket (bytes, KB MB etc allowed)
 NodeClientCore.maxRAMBucketSizeLong=Maximum size of a RAMBucket (bigger buckets will be kept as files on the disk)
 NodeClientCore.ramBucketPoolSize=Amount of RAM to dedicate to temporary buckets (bytes, KB MB etc allowed)
