Quick and little fix for the FR translation. (No new translation for now.)

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -577,7 +577,7 @@ FirstTimeWizardToadlet.autoUpdateLong=Freenet peut se mettre à jour automatique
 FirstTimeWizardToadlet.autoUpdateNoAutodeploy=Demander quand une nouvelle version est disponible
 FirstTimeWizardToadlet.autodetectedSuggestedLimit=Choix recommandé :
 FirstTimeWizardToadlet.backToSecurityLevels=Ne pas créer de mot de passe et retourner à l'assistant.
-FirstTimeWizardToadlet.bandwidthCapPrompt=Est-ce que votre connexion internet a quota mensuel de données ?
+FirstTimeWizardToadlet.bandwidthCapPrompt=Est-ce que votre connexion internet a un quota mensuel de données ?
 FirstTimeWizardToadlet.bandwidthCurrent=Limite de bande passante actuelle
 FirstTimeWizardToadlet.bandwidthDetected=Vitesse détectée (utilise la moitié)
 FirstTimeWizardToadlet.bandwidthDownloadHeader=Limite de téléchargement
@@ -625,7 +625,7 @@ FirstTimeWizardToadlet.enableUPnP=Activer Universal Plug and Play (UPnP). Active
 FirstTimeWizardToadlet.fivePercentDisk=(= 5% de l'espace libre)
 FirstTimeWizardToadlet.friendsSecurityPageTitle=Assistant de démarrage de Freenet ! - Sécurité des Amis
 FirstTimeWizardToadlet.highNetworkThreatLevelCheckbox=Je connais au moins une personne qui utilise Freenet (3 de préférence, 5 à 10 pour de bonnes performances). Je vais les ajouter sur la page Amis. J'ai compris que Freenet ne fonctionnera pas à moins que mes Amos soient connectés.
-FirstTimeWizardToadlet.highNetworkThreatLevelWarning=${bold}ATTENTION${/bold} : Vous êtes sur le point de passer le niveau de sécurité réseau à haut. Cela signifie que votre noeud sera incapable de se connecter à mois que ${bold}vous ajoutiez des connexions à vos Amis${/bold}. Il faudrait que ce soit des gens que vous connaissez et en qui vous avez confiance. Si vous ne connaissez personne qui utilise Freenet, utilisez le niveau de sécurité réseau NORMAL et Freenet établira des connexions automatiquement. Ajouter des gens que vous ne connaissez pas comme Amis n'améliorera pas la sécurité et diminuera les performances. Notez également que le niveau de sécurité réseau HAUT est plus lent, particulièrement si vous n'avez pas beaucoup d'Amis (il en faut 5 à 10 pour des performances correctes).
+FirstTimeWizardToadlet.highNetworkThreatLevelWarning=${bold}ATTENTION${/bold} : Vous êtes sur le point de passer le niveau de sécurité réseau à haut. Cela signifie que votre noeud sera incapable de se connecter à moins que ${bold}vous ajoutiez des connexions à vos Amis${/bold}. Il faudrait que ce soit des gens que vous connaissez et en qui vous avez confiance. Si vous ne connaissez personne qui utilise Freenet, utilisez le niveau de sécurité réseau NORMAL et Freenet établira des connexions automatiquement. Ajouter des gens que vous ne connaissez pas comme Amis n'améliorera pas la sécurité et diminuera les performances. Notez également que le niveau de sécurité réseau HAUT est plus lent, particulièrement si vous n'avez pas beaucoup d'Amis (il en faut 5 à 10 pour des performances correctes).
 FirstTimeWizardToadlet.homepageTitle=Assistant de démarrage Freenet !
 FirstTimeWizardToadlet.iDoTrust=Faites-vous confiance aux personnes connectés par ${interface} (${ip}) ?
 FirstTimeWizardToadlet.isNetworkTrusted=Le réseau local est-il digne de confiance ?
@@ -671,7 +671,7 @@ FirstTimeWizardToadlet.presetHigh=Si vous connaissez plusieurs personnes auxquel
 FirstTimeWizardToadlet.presetLow=Si vous vivez dans un pays relativement libre où utiliser Freenet est légal, vous pouvez choisir cette option. C'est beaucoup plus sûr que les traditionnels programmes P2P comme BitTorrent ou Gnutella, mais un attaquant avec des ressources modérées pourrait être en mesure de tracer votre activité sur Freenet pour remonter jusqu'à vous. Si vous avez des amis qui ont aussi Freenet, vous pouvez améliorer la sécurité en les ajoutant en tant qu'amis puis en vous connectant uniquement à eux.
 FirstTimeWizardToadlet.presetNone=Si vous voulez un contrôle plus précis, cette option vous permet de régler Freenet selon vos besoins concernant la vie privée. Cela sera un peu plus long que les deux autres options.
 FirstTimeWizardToadlet.presetTitleHigh=Se connecter uniquement aux amis: (haute sécurité)
-FirstTimeWizardToadlet.presetTitleLow=Se connecte à n'importe quel utilisateur de Freenet (sécurité faible)
+FirstTimeWizardToadlet.presetTitleLow=Se connecter à n'importe quel utilisateur de Freenet (sécurité faible)
 FirstTimeWizardToadlet.presetTitleNone=Réglages détaillés: (personnalisé)
 FirstTimeWizardToadlet.step1Title=Assistant de démarrage Freenet ! - Amis et Inconnus
 FirstTimeWizardToadlet.step2Title=Assistant de démarrage Freenet ! - Choisissez le nom de votre noeud
@@ -1214,7 +1214,7 @@ PluginManager.pluginDesc.Library=Outil pour chercher sur Freenet utilisant l’a
 PluginManager.pluginDesc.MDNSDiscovery=Annonce Freenet sur votre réseau local (LAN) ainsi les clients peuvent automatiquement se connecter à lui. Peu utilisé actuellement.
 PluginManager.pluginDesc.SNMP=Vous permet de surveiller à distance le statut de votre nœud Freenet via des outils tel que MRTG.
 PluginManager.pluginDesc.Spider=Outil pour créer et automatiquement envoyer le nouveau format des index de recherches des Freesite en suivant automatiquement les liens de vos marque-pages.Engendre une forte charge de votre nœud Freenet. Ne l'utilisez pas à moins que vous n'ayez un ordinateur puissant ! Nécessite que le plugin Library soit chargé.
-PluginManager.pluginDesc.TestGallery=Plugin pour une galerie en page simple, actuellement non utilisée.
+PluginManager.pluginDesc.TestGallery=Plugin pour une galerie en page simple, actuellement non utilisé.
 PluginManager.pluginDesc.ThawIndexBrowser=Vous permet de naviguer dans les fichiers index de Thaw et de télécharger les fichiers depuis eux via l'interface web de Freenet sans avoir à installer Thaw.
 PluginManager.pluginDesc.UPnP=Discute avec votre routeur pour découvrir votre adresse IP et essaye automatiquement de faire suivre vos ports UDP pour améliorer la connectivité. Vous devriez avoir ceci d'activé à moins que votre LAN ne soit pas de confiance. Ceci est habituellement sur, contrairement à JSTUN.
 PluginManager.pluginDesc.WebOfTrust=Vous permet de créer une identité anonyme. Ces identités peuvent se faire mutuellement confiance ou non et donc peuvent éviter les spam ou les attaques DoS. Arrière-plan pour le t'chat et les applications sociales sur Freenet.
