Consistently use the american spelling of "compromized"

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -431,7 +431,7 @@ DarknetConnectionsToadlet.tooOld=Connected but too old: This node's minimum mand
 DarknetConnectionsToadlet.tooOldShort=Too old
 DarknetConnectionsToadlet.triedToAddSelf=You can't add your own node to the list of remote peers.
 DarknetConnectionsToadlet.trustTitle=Trust level
-DarknetConnectionsToadlet.trustMessage=Higher trust = more information shared, better performance but less security if the friend is a bad guy or is seized or compromised
+DarknetConnectionsToadlet.trustMessage=Higher trust = more information shared, better performance but less security if the friend is a bad guy or is seized or compromized
 DarknetConnectionsToadlet.unknownAddress=(unknown address)
 DarknetConnectionsToadlet.updateChangedPrivnotes=Update changed private notes
 DarknetConnectionsToadlet.urlReference=OR enter the URL of the node reference here:
@@ -1362,7 +1362,7 @@ PluginJarUpdater.pluginUpdatedShortText=A new version of the ${name} plugin is a
 PluginJarUpdater.pluginUpdatedText=Click below to update to the latest version (${newVersion}) of ${name}.
 PluginJarUpdater.pluginUpdatedTitle=A new version of the ${name} plugin is available!
 PluginJarUpdater.updatePlugin=Update plugin after final security checks
-PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update system has not been compromised.
+PluginJarUpdater.willDeployAfterRevocationCheck=The plugin ${name} will be deployed as soon as we have finished double-checking that the auto-update system has not been compromized.
 PluginManager.alwaysLoadPluginsFromCentralServer=Always load plugins over the web? (NOT RECOMMENDED!)
 PluginManager.alwaysLoadPluginsFromCentralServerLong=If true, always download plugins over the web from our web server rather than over Freenet. This is more reliable but dangerous: While we use SSL, wiretappers may still be able to identify which plugin you download, and correlate it with when a new identity is created e.g. on Freemail;  certainly they could tell you use Freenet. 
 PluginManager.cannotSetOnceLoaded=Cannot set the plugins list once loaded
@@ -1666,7 +1666,7 @@ QueueToadlet.uploadSucceededTitle=Insert succeeded: ${filename}
 QueueToadlet.uploadsSucceededTitle=${nr} inserts succeeded
 QueueToadlet.uploadSucceeded=Your file ${filename} (size ${size}) has been successfully uploaded to Freenet. ${link}Click here${/link} to open the file.
 QueueToadlet.warningUnsafeContent=Potentially Unsafe Content
-QueueToadlet.warningUnsafeContentExplanation=The file you want to download is currently not filtered by Freenet's content filter! That means that your anonymity can be compromised by opening the file!
+QueueToadlet.warningUnsafeContentExplanation=The file you want to download is currently not filtered by Freenet's content filter! That means that your anonymity can be compromized by opening the file!
 QueueToadlet.wipD=In Progress: Downloads (${size})
 QueueToadlet.wipDU=In Progress: Directory Uploads (${size})
 QueueToadlet.wipU=In Progress: Uploads (${size})
@@ -1683,8 +1683,8 @@ RevocationKeyFoundUserAlert.text=The Freenet auto-update system appears to have 
 RevocationKeyFoundUserAlert.textDetail=The message is: ${message}
 RevocationKeyFoundUserAlert.textDisabled=The auto-updater has been disabled. This might be because of a local problem, such as running out of disk space, or the auto-updating system may have been compromized.
 RevocationKeyFoundUserAlert.textDisabledDetail=The reason is: ${message}.
-RevocationKeyFoundUserAlert.title=URGENT: The Freenet auto-update system has been compromised!
-RevocationKeyFoundUserAlert.titleDisabled=The auto-updater may have been compromised! We have turned it off for now, please click for more details.
+RevocationKeyFoundUserAlert.title=URGENT: The Freenet auto-update system has been compromized!
+RevocationKeyFoundUserAlert.titleDisabled=The auto-updater may have been compromized! We have turned it off for now, please click for more details.
 SecurityLevels.title=Security levels
 SecurityLevels.tooltip=Configure your Freenet node's degree of security
 SecurityLevels.networkThreatLevelShort=Protection against a stranger attacking you over the Internet
