--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1346,13 +1346,13 @@ PeerManagerUserAlert.tooManyNeverConnectedWithLink=Many of this node's peers hav
 PeerManagerUserAlert.tooOldNeverConnectedPeers=One or more of your node's peers have never connected in the two weeks since they were added.  Consider removing them since they are marginally affecting performance (wasting packets talking to nodes that aren't there).
 PeerManagerUserAlert.tooOldNeverConnectedPeersTitle=Never connected peer(s) too old
 PeerManagerUserAlert.twoConns=This node has only two connections. Performance and security will not be very good, and your node is not doing any routing for other nodes. Your node is embedded like a 'chain' in the network and does not contribute (much) to the network's health. Try to get at least 3 (ideally more like 5-10) connected peers at any given time.
-PeersSayKeyBlownAlert.intro=One or more of your peers says that the auto-update key is blown! This means that an attacker may know the private key for the auto-update system and can therefore cause your node to run code of his choice (if you update)! The auto-update system has been disabled. It is also possible that your peers are deliberately lying about it.
+PeersSayKeyBlownAlert.intro=One or more of your peers says that the auto-update system has been compromized! This means that an attacker may know the private key for the auto-update system and can therefore cause your node to run code of his choice (if you update)! The auto-update system has been disabled. It is also possible that your peers are deliberately lying about it.
 PeersSayKeyBlownAlert.fetching=Your node is attempting to download the revocation certificate to find out more details.
-PeersSayKeyBlownAlert.failedFetch=Your node has been unable to download the revocation certificate. Possible causes include an attack on your node to try to get you to update despite the key being blown, or your nodes lying about the key being blown. Please contact the developers or other Freenet users to sort out this mess.
-PeersSayKeyBlownAlert.connectedSayBlownLabel=These connected nodes say that the key has been blown (we are trying to download the revocation cert from them):
-PeersSayKeyBlownAlert.disconnectedSayBlownLabel=These nodes told us that the key has been blown, but then disconnected, so we could not fetch the revocation certificate:
-PeersSayKeyBlownAlert.failedTransferSayBlownLabel=These nodes told us that the key has been blown, but then failed to transfer the revocation certificate:
-PeersSayKeyBlownAlert.titleWithCount=Auto-update key blown according to ${count} peer(s)!
+PeersSayKeyBlownAlert.failedFetch=Your node has been unable to download the revocation certificate. Possible causes include an attack on your node to try to get you to update despite the key being compromized, or your nodes lying about the key being compromized. Please contact the developers or other Freenet users to sort out this mess.
+PeersSayKeyBlownAlert.connectedSayBlownLabel=These connected nodes say that the auto-update key has been compromized (we are trying to download the revocation certificate from them):
+PeersSayKeyBlownAlert.disconnectedSayBlownLabel=These nodes told us that the auto-update key has been compromized, but then disconnected, so we could not fetch the revocation certificate:
+PeersSayKeyBlownAlert.failedTransferSayBlownLabel=These nodes told us that the auto-update key has been compromized, but then failed to transfer the revocation certificate:
+PeersSayKeyBlownAlert.titleWithCount=Auto-update key compromized according to ${count} peer(s)!
 PeersSayKeyBlownAlert.short=According to some of your peers it is not safe to auto-update. Auto-update has been disabled until we know if they are not making it up.
 PluginConfig.configFile=Plugins configuration file
 PluginConfig.configFileLong=Path/Filename for the file which stores the plugin configuration
