Ask the user for confirmation if auto-update isn't turned on.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -979,6 +979,8 @@ LogConfigHandler.rotationInterval=Log rotation interval
 LogConfigHandler.rotationIntervalLong=Log rotation interval - period after which logs are rotated. We keep the last two log files (current and prev), plus lots of compressed logfiles up to maxZippedLogsSize
 LoggerHook.unrecognizedPriority=Unrecognised priority name: ${name}.
 LongOption.parseError=The value specified can't be parsed as a 64-bit integer : ${val}
+MainJarUpdater.ConfirmMultiFileUpdater.title.wrapper-update-unix=Please update the wrapper files
+MainJarUpdater.ConfirmMultiFileUpdater.text.wrapper-update-unix=Freenet has downloaded an update to the Java Service Wrapper binaries. These are a set of files involved in running and updating Freenet. Updating these files may fix some important bugs especially on Linux/FreeBSD, particularly a bug that often causes Freenet to restart repeatedly after an update. We strongly recommend that you allow Freenet to update these files as soon as is convenient.
 MeaningfulNodeNameUserAlert.noNodeNick=Please set a name for your node so that your friends can identify your node, e.g. if you send them a message or a file. This will only be visible to your Friends who you manually connect to via the Add a Friend page, and possibly to their Friends. Your node's nickname will not be visible to strangers, that is, Freenet connections added automatically in the lower security levels.
 MeaningfulNodeNameUserAlert.noNodeNickTitle=Please set a name for your Freenet node.
 MeaningfulNodeNameUserAlert.noNodeNickShort=Please set a name for your Freenet node.
