Add links to changelog and developer details
This is just on the update alert and statistics page next to the
version. Ideally there would also be an alert after an update is applied
with the same information for those with auto-update enabled, but that
takes more time to write and doesn't exist yet.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -2077,6 +2077,8 @@ UpdateDeployContext.updateCatastrophe=CATASTROPHIC ERROR: Deleted ${old} but can
 UpdateDeployContext.updateFailedCannotDeleteOldConfig=Cannot delete ${old} so cannot rename over it. Update failed.
 UpdateDeployContext.updateFailedNonStandardConfig=Not able to update because of non-standard config: written main=${main} - should not happen! Report this to the devs, include your wrapper.conf.
 UpdatedVersionAvailableUserAlert.armed=Your node will automatically restart as soon as it has finished downloading and verifying the new version of Freenet.
+UpdatedVersionAvailableUserAlert.changelog=Release announcement
+UpdatedVersionAvailableUserAlert.devchangelog=Developer details
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Click below to update your node as soon as the update has been verified.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Click below to update your node immediately.
 UpdatedVersionAvailableUserAlert.brokenDependencies=There has been some sort of problem fetching the jars required for the next version, so Freenet cannot update itself to build ${version}. However, if it finds a later version, it will try again. You can see more details in wrapper.log.
