Add French translation for changelog links

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -2077,6 +2077,8 @@ UpdateDeployContext.updateCatastrophe=ERREUR CATASTROPHIQUE : Fichier ${old} sup
 UpdateDeployContext.updateFailedCannotDeleteOldConfig=Impossible de supprimer ${old} et donc de le recouvrir. La mise à jour a échouée.
 UpdateDeployContext.updateFailedNonStandardConfig=Mise à jour impossible à cause d'une configuration non standard : main=${main} ext=${ext} - Cela ne devrait pas arriver ! Contactez les développeurs en joignant votre fichier wrapper.conf.
 UpdatedVersionAvailableUserAlert.armed=Votre noeud redémarrera automatiquement quand il aura téléchargé et vérifié la nouvelle version de Freenet.
+UpdatedVersionAvailableUserAlert.changelog=Annonce de parution
+UpdatedVersionAvailableUserAlert.devchangelog=Détails du développeur
 UpdatedVersionAvailableUserAlert.clickToUpdateASAP=Cliquez ici pour mettre à jour votre noeud dès que la mise à jour aura été vérifiée.
 UpdatedVersionAvailableUserAlert.clickToUpdateNow=Cliquez ci-dessous pour mettre à jour immédiatement.
 UpdatedVersionAvailableUserAlert.brokenDependencies=Il y à un problème poru télécharger les jars nécessaires à la nouvelle version, Freenet ne peux pas se mettre à jour seul à votre version vers la nouvelle ${version}. Cependant, si il trouve une version ultérieure il essaiera à nouveau. Vous pouvez trouver plus de détails dans wrapper.log.
