Add localization for Java EOL alert
Freenet will soon be moving to require Java 7, but first must warn users
of this change. Adding this text allows translations of it before the
alert code has been written.

Via http://www.oracle.com/technetwork/java/javase/eol-135779.html
"After February 2013, Oracle will no longer post updates of Java SE 6 to
its public download sites."

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -937,6 +937,8 @@ InvalidAddressOverrideUserAlert.unknownAddressTitle=Invalid Address Override Val
 InvalidAddressOverrideUserAlert.unknownAddressWithConfigLink=Freenet has determined that the currently configured ipAddressOverride value is invalid, meaning that it does not match the syntax for a valid hostname, IPv4 address or IPv6 address (in the opinion of the current implementation of the function that checks the IPv6 address syntax). You can correct the 'IP address override' ${link}configuration parameter${/link}.
 InvalidAddressOverrideUserAlert.unknownAddressShort=Your ipAddressOverride is bogus. Please fix it.
 IntOption.parseError=The value specified can't be parsed as a 32-bit integer : ${val}
+JavaEOLAlert.body=Your Java version ${current} is at its "End Of Life" and is no longer receiving updates to fix security problems. Freenet will require version ${new} or higher in a future update, so it will stop working with this one. Please upgrade your Java installation.
+JavaEOLAlert.title=Freenet will stop working with your outdated Java version
 JPEGFilter.notJpeg=The file you tried to fetch is not a JPEG. It might be some other file format, and your browser may do something dangerous with it, therefore we have blocked it.
 KnownUnsafeContentTypeException.dangerousInlines=This type of content can contain inline images or videos, and can therefore load content from the non-anonymous open Web, exposing your IP address.
 KnownUnsafeContentTypeException.dangerousInlinesLabel=Dangerous inlines:
