Add updated translations from Transifex.

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -627,7 +627,7 @@ FProxyToadlet.dangerousRSS=Freenet a détecté que le fichier que vous essayez d
 FProxyToadlet.dangerousRSSSubtitle=Les flux RSS peuvent être dangereux
 FProxyToadlet.dangerousRSSTitle=Contenu potentiellement dangereux (RSS)
 FProxyToadlet.diagnostic=Diagnostics à envoyer aux développeurs
-FProxyToadlet.diagnosticTitle=Diagnostique
+FProxyToadlet.diagnosticTitle=Diagnostic
 FProxyToadlet.downloadInBackgroundToDiskButton=Téléchargement
 FProxyToadlet.downloadInBackgroundToDisk=Télécharger en arrière plan et enregistrer dans le dossier downloads
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Téléchargement temporaire
@@ -675,8 +675,8 @@ FProxyToadlet.openPossRSSForceDisk=${link}Cliquez ici${/link} pour essayer de fo
 FProxyToadlet.openPossRSSAsPlainText=${link}Cliquez ici${/link} pour ouvrir le fichier en texte brut (cela ${bold}peut être dangereux${/bold} si vous utilisez Internet Explorer 7.0 ou Firefox 2.0.0).
 FProxyToadlet.openRSSAsRSS=${link}Cliquez ici${/link} pour ouvrir le fichier en tant que RSS (ceci <b>est dangereux</b> dans le cas où l'auteur du site est malicieux car Freenet n'est pas encore capable de filtrer le RSS).
 FProxyToadlet.openRSSForce=${link}Cliquez ici${/link} pour ouvrir le fichier en tant que ${mime} (ceci ${bold}peut être dangereux${/bold} avec IE7 et FF2).
-FProxyToadlet.opennet=Gérer les connexions aux Inconnus
-FProxyToadlet.opennetTitle=Connexions aux Inconnus
+FProxyToadlet.opennet=Gérer les connexions aux inconnus
+FProxyToadlet.opennetTitle=Connexions aux inconnus
 FProxyToadlet.openWithKeyExplorer=${link}Cliquez ici${/link} pour ouvrir cette URI avec Key Explorer.
 FProxyToadlet.openWithSiteExplorer=${link}Cliquez ici${/link} pour ouvrir cette URI avec Site Explorer.
 FProxyToadlet.options=Les choix possibles sont :
@@ -937,6 +937,8 @@ InvalidAddressOverrideUserAlert.unknownAddressTitle=Valeur d'adresse IP invalide
 InvalidAddressOverrideUserAlert.unknownAddressWithConfigLink=Freenet a détecté que l'"adresse IP du moment" est invalide, car sa syntaxe ne correspond ni à un nom d'hôte, ni à une adresse IP (v4 ou v6). Vous pouvez corriger le ${link}paramètre de configuration${/link} "Adresse IP du moment".
 InvalidAddressOverrideUserAlert.unknownAddressShort=Votre ipAddressOverride est invalide. Veuillez le corriger.
 IntOption.parseError=Cette valeur n'est pas un entier sur 32 bits : ${val}
+JavaEOLAlert.body=Votre version de Java ${current} est en «fin de vie» et ne recevra plus de mises à jour pour résoudre les problèmes de sécurité. Freenet nécessitera la version ${nouveau} ou plus dans une future mise à jour, il cessera de fonctionner avec celle-ci. Merci de mettre à jour très rapidement votre installation de Java.
+JavaEOLAlert.title=Freenet cessera de fonctionner avec cette  ancienne version de Java
 JPEGFilter.notJpeg=Ce fichier n'est pas un JPEG. Il peut s'agir de n'importe quoi et votre noeud risque de faire des choses dangereuse avec, c'est pourquoi nous l'avons bloqué.
 KnownUnsafeContentTypeException.dangerousInlines=Ce type de fichier peut contenir des images ou des vidéos en ligne, et peut donc charger du contenu depuis le web non-anonyme, révélant ainsi votre adresse IP.
 KnownUnsafeContentTypeException.dangerousInlinesLabel=Contenu dangereux :
@@ -1053,7 +1055,7 @@ Node.dropPacketEveryLong=Fréquence à laquelle le noeud ignore les paquets. Opt
 Node.enableARKs=Activer les ARKs? (NE PAS DESACTIVER !)
 Node.enableARKsLong=Activer les ARKs? (NE PAS DESACTIVER !).
 Node.enableOpennetFailedTitle=L'activation de l'opennet a échoué
-Node.enableOpennetFailed=Le noeud n'est pas parvenu à activer l'opennet, et ne peut pas se connecter à des inconnus. Vous devrez résoudre le problème, signaler le bug, ou vous contentr des connexions aux Amis. Détails : ${message}
+Node.enableOpennetFailed=Le noeud n'est pas parvenu à activer l'opennet, et ne peut pas se connecter à des inconnus. Vous devrez résoudre le problème, signaler le bug, ou vous contenter des connexions aux Amis. Détails : ${message}
 Node.enableNewLoadManagementRT=Activer la nouvelle gestion de charge (pour les requêtes en temps réel)? (EXPÉRIMENTAL)
 Node.enableNewLoadManagementRTLong=Activez ceci pour tester le nouveau code de gestion des requêtes en temps réel. Ceci est hautement expérimental et pourrait sévèrement endommager votre nœud ou dramatiquement réduire ou augmenter ses performances ! Bonne chance et tenez-nous informé !
 Node.enableNewLoadManagementBulk=Activer la nouvelle gestion de charge (pour les requêtes en vrac)? (EXPÉRIMENTAL)
@@ -1135,7 +1137,7 @@ Node.notUsingWrapperShort=Freenet fonctionne sans wrapper. Ce n'est pas recomman
 Node.oneConnectionPerIP=N'autoriser qu'une seule connexion par adresse IP ?
 Node.oneConnectionPerIPLong=Rejette automatiquement les connexions d'amis quand d'autres amis ont la même adresse IP (externe). NE PAS UTILISER A MOINS DE SAVOIR *VRAIMENT* CE QUE VOUS FAITES!
 Node.opennetEnabled=Activer le mode peu sécurisé (connexion automatique à des nœuds inconnus) ?
-Node.opennetEnabledLong=Activer le mode peu sécurisé (Opennet) ? Si vous faites cela, votre nœud échangera automatiquement des références avec des Inconnus (inconnu, par opposition aux amis). Cela implique que n'importe qui peut savoir que vous possédez un nœud Freenet et que certaines attaques seront plus faciles. Si vous connaissez suffisamment de personnes utilisant Freenet, vous devriez établir des connexions de confiance (Amis) avec eux et désactiver cette fonction.
+Node.opennetEnabledLong=Activer le mode peu sécurisé (Opennet) ? Si vous faites cela, votre nœud échangera automatiquement des références avec des Inconnus (inconnus, par opposition aux amis). Cela implique que n'importe qui peut savoir que vous possédez un nœud Freenet et que certaines attaques seront plus faciles. Si vous connaissez suffisamment de personnes utilisant Freenet, vous devriez établir des connexions de confiance (Amis) avec eux et désactiver cette fonction.
 Node.outBWLimit=Limite d'upload (octet/seconde)
 Node.outBWLimitLong=Limite de la bande passante allouée au téléchargement. Freenet essaie de ne pas la dépasser, mais il n'est pas très précis. S'elle est défini à -1 à la limite de la bande passante de téléchargement va être 4 fois la limite de bande passante en upload. Sans unités c'est en bytes/seconde, et les unités SI et IEC sont acceptées, les notations comme 10 KiB/s ou 1,5 Mbps (soit 10 kibibytes/s et 1,5 megabytes/sec) sont aussi acceptées
 Node.paddDataPackets=Ajouter un volume aléatoire de données aux paquets envoyés ? (LISEZ L'AVERTISSEMENT !)
