--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -121,6 +121,7 @@ Bookmarks.Defaults.ShortDescription.Enzo=Links to most Freenet web sites, sorted
 Bookmarks.Defaults.ShortDescription.TUFI=Older Freenet sites
 Bookmarks.Defaults.ShortDescription.ISF=Index of French sites
 Bookmarks.Defaults.ShortDescription.FMS=Message boards over Freenet
+Bookmarks.Defaults.ShortDescription.Fniki=Wiki over Freenet
 Bookmarks.Defaults.ShortDescription.Freemail=Email over Freenet
 Bookmarks.Defaults.ShortDescription.Publish=How to publish web sites on freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a website to Freenet
