Fixed some issues
1) Removing duplicate localization of submit
2) Rename newDarknetPeersCount to numPendingPeersCount
3) 0.0.0.0 bindTo description in localization
4) Rename configureFile to loadTempRefsFile
5) Spelling mistake of exchange
6) Making changeNumPeersCount static, synchronized
7) Removing writing to console

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -306,14 +306,13 @@ DarknetAppServer.enabledLong=Enable synchronization with mobile app?
 DarknetAppServer.port=Port
 DarknetAppServer.portLong=Port
 DarknetAppServer.allowedHosts=Allowed Hosts
-DarknetAppServer.allowedHostsLong=Allowed Hosts(default -->*<--)
+DarknetAppServer.allowedHostsLong="*" to allow all hosts
 DarknetAppServer.bindTo=Bind To 
-DarknetAppServer.bindToLong=Bind To (default -->0.0.0.0<--)
+DarknetAppServer.bindToLong= Bind to 0.0.0.0 to accept on all interfaces
 DarknetConnectionsToadlet.addAnotherFriend=Add another Friend
 DarknetConnectionsToadlet.goFriendConnectionStatus=Go to the Friends page to see whether this friend connects
 DarknetConnectionsToadlet.activityTitle=Current Activity
 DarknetConnectionsToadlet.add=Add
-DarknetConnectionsToadlet.addNew=Submit
 DarknetConnectionsToadlet.addOpennetPeerTitle=Manually connect to a Stranger (not recommended!)
 DarknetConnectionsToadlet.addPeerTitle=Connect to a Friend
 DarknetConnectionsToadlet.alreadyInReferences=We already have the given reference.
