--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -98,12 +98,12 @@ Bookmarks.Defaults.Name.categoryIndexes=Répertoire de site web sur Freenet
 Bookmarks.Defaults.Name.categorySoftware=Logiciels liés à Freenet et documentation
 Bookmarks.Defaults.Name.categoryBlogs=Blogs de l'équipe Freenet
 Bookmarks.Defaults.Description.TUFI=Un index en une page avec menu incluant des catégories
-Bookmarks.Defaults.Description.AFK=Un index de site Freenet avec catégories
+Bookmarks.Defaults.Description.AFK=Un index de sites Freenet avec catégories
 Bookmarks.Defaults.Description.Enzo=Un index de site Freenet avec catégories
-Bookmarks.Defaults.Description.Linkageddon=Un grand index régulièrement mis à jour, un lien vers absolument tout. Certains sites peuvent ne pas avoir des descriptions précises. Soyez prudent!
+Bookmarks.Defaults.Description.Linkageddon=Un grand index régulièrement mis à jour, liant vers absolument tout. Certains sites peuvent ne pas avoir des descriptions précises. Soyez prudent !
 Bookmarks.Defaults.Description.Nerdageddon=Semblable à Linkageddon mais dont le contenu le plus offensant a été enlevé, aussi bien qu'ont étés laissés tomber quelques sites que l'auteur considère ennuyeux
 Bookmarks.Defaults.Description.ISF=Un petit index français avec descriptions
-Bookmarks.Defaults.Description.FMS=Le freesite officiel de FMS, forum résistant au spams pour Freenet
+Bookmarks.Defaults.Description.FMS=Le freesite officiel de FMS, forum résistant aux spams pour Freenet
 Bookmarks.Defaults.Description.Freemail=Le site officiel de Freemail - email sur Freenet
 Bookmarks.Defaults.Description.Publish=Guide simple pour créer des sites Web sur Freenet
 Bookmarks.Defaults.Description.FreesiteHOWTO=Un guide plus détaillé pour publier des freesites
@@ -114,11 +114,11 @@ Bookmarks.Defaults.Description.jSite=Un guide pour publier des freesites (site w
 Bookmarks.Defaults.Description.Flog.Toad=Le Flog de Toad
 Bookmarks.Defaults.Description.Flog.Bombe=Le Flog de Bombe
 Bookmarks.Defaults.Description.Flog.Xor=Le Flog principal du développeur de Freetalk et de Web Of Trust 
-Bookmarks.Defaults.ShortDescription.Linkageddon=Liens vers tous les sites Freenet, attention certains sont très 'offensifs', faites attention !
+Bookmarks.Defaults.ShortDescription.Linkageddon=Liens vers tous les sites Freenet, triés par date de mise à jour, incluant certains sites très offensants, faites attention !
 Bookmarks.Defaults.ShortDescription.Nerdageddon=Semblable à Linkageddon mais dont le contenu le plus offensant a été enlevé
-Bookmarks.Defaults.ShortDescription.AFK=Site sFreenet triés par catégories
-Bookmarks.Defaults.ShortDescription.Enzo=Des liens vers la plupart des sites web Freenet, triés par catégories pour rendre plus facile de trouver ce que vous voulez
-Bookmarks.Defaults.ShortDescription.TUFI=Vieux sites Freenet
+Bookmarks.Defaults.ShortDescription.AFK=Liens vers la plupart des sites web Freenet, triés par catégories afin de rendre plus facile de trouver ce que vous voulez. (périmé, utiliser Enzo)
+Bookmarks.Defaults.ShortDescription.Enzo=Liens vers la plupart des sites web Freenet, triés par catégories pour rendre plus facile de trouver ce que vous voulez
+Bookmarks.Defaults.ShortDescription.TUFI=Sites Freenet plus anciens
 Bookmarks.Defaults.ShortDescription.ISF=Index de sites Français
 Bookmarks.Defaults.ShortDescription.FMS=Forums sur Freenet
 Bookmarks.Defaults.ShortDescription.Freemail=Email pour Freenet
@@ -133,7 +133,7 @@ Bookmarks.Defaults.ShortDescription.Flog.Bombe=Blog personnel du développeur de
 Bookmarks.Defaults.ShortDescription.Flog.Xor=Blog du développeur de Freetalk
 BooleanOption.parseError=Booleen non reconnu : ${val} - essayez oui ou non
 ChatForumsToadlet.title=Parler à d'autres personnes sur Freenet
-ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}sur le net${/frost-web}) - Le premier programme de discussion sur forum de Freenet. Malheureusement Frost est vulnérable aux attaques par déni de service (spam invisible), et la plupart des forums sont fréquemment inutilisables (marqués en rouge). Vous pouvez utiliser FMS, qui ne fait pars partie de Freenet, alors vous aurez à l'installer par vous même.
+ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}sur le net${/frost-web}) - Le premier logiciel de discussion sur forum de Freenet. Malheureusement Frost est vulnérable aux attaques par déni de service (spam invisible), et la plupart des forums sont fréquemment inutilisables (marqués en rouge). Vous pouvez utiliser FMS, qui ne fait pas partie de Freenet, c'est pourquoi vous aurez à l'installer par vous même.
 ChatForumsToadlet.fms=${fms}FMS${/fms} - (The Freenet Message System) est un autre système de forum, Il n'est pas vulnérable contre les attaques de spam qui ont saturé Frost. Il n'est pas aussi simple à configurer que Frost et il est publié anonymement sur Freenet.
 ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - Ce guide officieux peut être très utile dans l'installation de ces outils et d'autres outils de communication Freenet.
 ChatForumsToadlet.sone=${sone}Sone${/sone} -  Système de discussion centré sur la discussion et le following. C'est un plugin pour Freenet. Comme Freetalk il faut le plugin Web Of Trust.
@@ -320,7 +320,7 @@ DarknetConnectionsToadlet.clockProblemShort=Problème d'horloge
 DarknetConnectionsToadlet.confirmRemoveNode=Etes-vous sûr de vouloir supprimer "${name}" ? Ce n'est pas recommandé avant une semaine d'inactivité, cette inactivité peut être temporaire, et beaucoup d'utilisateurs ne peuvent pas laisser leur noeud tourner 24h/24.
 DarknetConnectionsToadlet.confirmRemoveNodeTitle=Veuillez confirmer
 DarknetConnectionsToadlet.confirmRemoveNodeWarningTitle=Suppression de noeud
-DarknetConnectionsToadlet.connected=Connectés : Nous sommes connectés à ces noeuds
+DarknetConnectionsToadlet.connected=Connectés : nous sommes connecté à ces noeuds
 DarknetConnectionsToadlet.connectedShort=Connectés
 DarknetConnectionsToadlet.countTitle=Décompte
 DarknetConnectionsToadlet.darknetFnpPort=Darknet FNP : ${port}/UDP (communication entre les noeuds ; vous voudrez sans doute ouvrir ce port dans votre firewall)
@@ -340,8 +340,8 @@ DarknetConnectionsToadlet.connErrorShort=Connexion échouée
 DarknetConnectionsToadlet.failedToAddNodeInternalError=Impossible de traiter ce texte comme une référence. Merci de signaler ceci aux développeurs :
 DarknetConnectionsToadlet.failedToAddNodeInternalErrorTitle=Ajout du noeud impossible : erreur interne
 DarknetConnectionsToadlet.failedToAddNodeTitle=Ajout de noeud échoué
-DarknetConnectionsToadlet.fcpDisabled=FCP est désactivé (pour les clients comme Frost et Thaw)
-DarknetConnectionsToadlet.fcpPort=FCP : ${port}/TCP (pour les clients comme Frost et Thaw)
+DarknetConnectionsToadlet.fcpDisabled=FCP est désactivé (pour les clients Freenet tels que Frost et Thaw)
+DarknetConnectionsToadlet.fcpPort=FCP : ${port}/TCP (pour les clients Freenet tels que Frost et Thaw)
 DarknetConnectionsToadlet.fileReference=OU indiquez un fichier contenant sa référence :
 DarknetConnectionsToadlet.forceRemove=Forcer la suppression
 DarknetConnectionsToadlet.fproxyDisabled=FProxy est désactivé (cette interface web)
@@ -423,8 +423,8 @@ DarknetConnectionsToadlet.sendMessageTitle=Envoyer un message inter-noeud
 DarknetConnectionsToadlet.sendMessageToPeers=Envoyer un message aux noeuds sélectionnés
 DarknetConnectionsToadlet.separator=-- -- --
 DarknetConnectionsToadlet.statusTitle=Etat
-DarknetConnectionsToadlet.tmciDisabled=TMCI est désactivé (interface simple en ligne de commande, à la telnet)
-DarknetConnectionsToadlet.tmciPort=TMCI: ${port}/TCP (interface simple en ligne de commande, à la telnet)
+DarknetConnectionsToadlet.tmciDisabled=TMCI est désactivé (interface simple en ligne de commande, à la Telnet)
+DarknetConnectionsToadlet.tmciPort=TMCI: ${port}/TCP (interface simple en ligne de commande, à la Telnet)
 DarknetConnectionsToadlet.tooNew=Connecté mais trop récents : ces noeuds n'acceptent pas de se connecter à nous car notre version est trop ancienne.
 DarknetConnectionsToadlet.tooNewShort=Trop récents
 DarknetConnectionsToadlet.tooOld=Connecté mais trop ancien : ces nœuds sont plus anciens que la version minimum acceptée par ce nœud. Votre nœud ne leur envoie pas de requêtes.
@@ -686,8 +686,8 @@ FProxyToadlet.plugins=Configurer et gérer les plugins
 FProxyToadlet.pluginsTitle=Plugins
 FProxyToadlet.progressCheckingStore=Votre ordinateur est en train de chercher cette page ou ce fichier dans votre cache local. S'il ne le trouve pas, il essayera de le télécharger sur le réseau Freenet.
 FProxyToadlet.lastRefresh=Dernier rafraîchissement il y a {0}
-FProxyToadlet.progressDownloading=Votre ordinateur est en train de télécharger cette page ou ce fichier sur Freenet. Cela peut prendre plusieurs secondes ou plusieurs minutes, selon la taille et la popularité du fichier. Plus souvent quelque chose est consulté sur Freenet, plus sa disponiblité et sa vitesse de chargement seront améliorées.
-FProxyToadlet.progressNotFinalized=La barre de progression sera imprécise tant qu'un nombre suffisants de blocs ne seront pas téléchargés afin de connaître la taille réelle de ce fichier.
+FProxyToadlet.progressDownloading=Votre ordinateur est en train de télécharger cette page ou ce fichier depuis Freenet. Cela peut prendre plusieurs secondes ou plusieurs minutes, selon la taille et la popularité de la page ou du fichier. Plus souvent quelque chose est consulté sur Freenet, plus sa disponibilité et sa vitesse de téléchargement s'améliorent.
+FProxyToadlet.progressNotFinalized=La barre de progression sera imprécise jusqu'à ce que nous aurons téléchargé suffisamment de blocs afin de connaître la taille réelle de ce fichier.
 FProxyToadlet.progressOptionZero=Vous pouvez patienter, le temps que la page soit téléchargée puis affichée. Cette page se rafraîchira toutes les deux secondes, puis vous serez automatiquement redirigé vers la page demandée dès que cela sera possible. Autrement :
 FProxyToadlet.queue=Gérer les requêtes en attente
 FProxyToadlet.queueTitle=Téléchargements et insertions
@@ -756,7 +756,7 @@ FetchException.longError.28=Pas assez de données trouvées; des données ont é
 FetchException.longError.29=Type MIME invalide : La clé n'était pas dans la liste de types MIME autorisés par le client
 FetchException.longError.2=Ne sait pas quoi faire avec le fichier fractionné
 FetchException.longError.30=Cette requète a été interrompu car le noeud a récemment reçu une requète pour cette clé et que cette requète avait échoué.
-FetchException.longError.31=La page (ou le fichier) apparaît comme corrompue, et peut être dangereux ; vous ne devriez pas ouvrir cette page sauf si vous savez ce que vous faites. Normalement Freenet peut analyser les pages de ce type, néanmoins cette page est tellement en mauvaise état que nous sommes incapable de la garantir comme fiable. Si vous l'ouvrez malgré tout elle ne sera pas analysée, elle peut alors potentiellement diffuser votre adresse IP.
+FetchException.longError.31=La page (ou le fichier) apparaît comme corrompue, et pourrait être dangereuse ; vous ne devriez pas ouvrir cette page sauf si vous savez ce que vous faites. Normalement Freenet peut analyser les pages de ce type, néanmoins cette page est en tel mauvais état que nous sommes incapable de la garantir comme fiable. Si vous l'ouvrez malgré tout elle ne sera pas analysée, elle pourrait alors potentiellement diffuser votre adresse IP.
 FetchException.longError.32=Le filtre de contenu n'est pas familier avec le type MIME des données et n'est pas en mesure de les traiter
 FetchException.longError.33=Le filtre de contenu a découvert un type MIME qui'il sait être dangereux, donc il n'est pas en mesure de traiter la demande
 FetchException.longError.34=Les résumés (hash) dans la métadonnée ne correspondent pas à la donnée actuelle. La donnée peut avoir été corrompue durant son téléchargement, ou elle peut avoir été altérée, par exemple, si le noeud inséreur était cassé ou si la donnée a changé sur le disque source à la mi-insertion.
@@ -1047,7 +1047,7 @@ Node.deadlockTitle=Blocage sûrement dû à un bug entre la JVM et le noyau
 Node.defragDatabaseOnStartup=Défragmenter la base de données des téléchargements au prochain démarrage ?
 Node.defragDatabaseOnStartupLong=Si activé, la base de données sera défragmentée durant le prochain démarrage ou après que vous ayez entré le mot de passe.
 Node.defragOnce=Défragmenter une fois seulement (régler l'option ci-dessus aussi !)
-Node.defragOnceLong=Si cette option et l'option ci-dessus sont activées, nous allons défragmenter au prochain démarrage du nœud, et ensuite désactiver l'option de défragmentation.
+Node.defragOnceLong=Si cette option et l'option ci-dessus sont activées, nous lanceront la défragmentation lors du prochain démarrage du nœud, puis nous désactiverons l'option défragmentation.
 Node.disablePHTLS=Désactiver le HTL probabiliste
 Node.disablePHTLSLong=Désactiver le HTL probabiliste (ne touchez pas ceci à moins de savoir ce que vous faîtes)
 Node.dropPacketEvery=Ignorer un paquet tous les
@@ -1509,9 +1509,9 @@ PproxyToadlet.versionTitle=Version
 SaltedHashFreenetStore.shortResizeProgress=Redimentionnement du datastore (${name}) en cours : ${processed}/${total}
 SaltedHashFreenetStore.shortRebuildProgressNew=Maintenance du datastore(${name}) en cours: ${processed}/${total} (conversion au nouveau format)
 SaltedHashFreenetStore.shortRebuildProgress=Maintenance du datastore (${name}) en cours : ${processed}/${total}
-SaltedHashFreenetStore.longResizeProgress=Redimentionnement du datastore (${name}) en cours : ${processed}/${total}. Le noeud sera plus lent que d'habitude pendant le processus. Evitez de redémarrer Freenet.
+SaltedHashFreenetStore.longResizeProgress=Redimentionnement du datastore (${name}) en cours : ${processed}/${total}. Le noeud sera plus lent que d'habitude pendant le processus. Évitez de redémarrer Freenet durant ceci si vous ne voulez pas perdre la progression.
 SaltedHashFreenetStore.longRebuildProgressNew=Maintenance du datastore (${name}) en cours: ${processed}/${total}. Nous avons changé le datastore pour qu'il utilise moins de charge sur votre ordinateur. (particulièrement les accès disque), mais nous avons d'abord besoin de reconstruire les indexes, ce qui sera assez lourd pour un moment en fonction de la taille de votre datastore. Votre nœud Freenet sera plus lent que d'habitude durant cette étape. Évitez de redémarrer votre nœud pendant ce temps si vous ne voulez pas perdre la progression.
-SaltedHashFreenetStore.longRebuildProgress=Maintenance du datastore (${name}) en cours : ${processed}/${total}. Le noeud sera plus lent que d'habitude pendant le processus. Evitez de redémarrer Freenet.
+SaltedHashFreenetStore.longRebuildProgress=Maintenance du datastore (${name}) en cours : ${processed}/${total}. Freenet reconstruit l'index "d'emplacement filtre" pour votre datastore, probablement parce que Freenet n'a pas été arrêté correctement à une certaine étape. Ceci permet à Freenet d'avoir beaucoup moins accès au disque, mais la reconstruction des index impliquera des accès supplémentaires au disque pendant quelque temps, selon la taille de votre datastore. Le noeud sera plus lent que d'habitude pendant le processus, veuillez éviter de redémarrer Freenet.
 SaltedHashFreenetStore.cleanerAlertTitle=Maintenance du datastore en cours
 QueueToadlet.awaitingCompression=En attente
 QueueToadlet.awaitingPasswordTitleDownloads=Mot de passe requis pour accéder à la liste des téléchargements
@@ -1922,7 +1922,7 @@ StatisticsToadlet.jvmVendor=Distributeur de la JVM : ${vendor}
 StatisticsToadlet.javaVersion=Version de Java : ${version}
 StatisticsToadlet.jvmVersion=Version de la JVM : ${version}
 StatisticsToadlet.keys=Clés
-StatisticsToadlet.mandatoryBackoffReason=Raison du Mandatory Backoff
+StatisticsToadlet.mandatoryBackoffReason=Raison de la temporisation (backoff) du mandataire
 StatisticsToadlet.maxMemory=Mémoire maximum pour Java : ${memory}
 StatisticsToadlet.maxTotalPeers=Nombre maximum de pairs
 StatisticsToadlet.maxOpennetPeers=Nombre maximum d'inconnus
@@ -1930,7 +1930,7 @@ StatisticsToadlet.newLoadManagementTitle=Nouvelles statistiques  de gestion de l
 StatisticsToadlet.nodeToNodeBytes=Message inter-noeuds : ${total}
 StatisticsToadlet.notBackedOff=Bien, votre nœud n'est pas rejeté de ses pairs!
 StatisticsToadlet.loadAllocationNoticesBytes=Avis de répartition de charge : ${total}
-StatisticsToadlet.noRequests=Votre noeud ne traite aucune requète à ce moment.
+StatisticsToadlet.noRequests=Votre noeud ne traite aucune requête en ce moment.
 StatisticsToadlet.offerReplys=Réponse à des demandes en cours : ${chk} CHK, ${ssk} SSK.
 StatisticsToadlet.offeredKeyOutput=Envoi de clés : clés ${total}, offres ${offered}
 StatisticsToadlet.opennetStats=Statistiques opennet
@@ -1947,7 +1947,7 @@ StatisticsToadlet.readRequests=Requêtes de lecture
 StatisticsToadlet.realGlobalWindow=Fenêtre globale réelle
 StatisticsToadlet.requestOutput=Requêtes envoyées (envoi utile): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.resendBytes=Octets renvoyés : ${total}
-StatisticsToadlet.routingBackoffReason=Raison du Routing Backoff
+StatisticsToadlet.routingBackoffReason=Raison de la temporisation (backoff) du routage
 StatisticsToadlet.routingDisabled=Pas de routage (nous sommes connectés à ce nœud mais l'un de nous refuse de router le traffic)
 StatisticsToadlet.routingDisabledShort=Pas de routage
 StatisticsToadlet.running=En cours
@@ -1979,7 +1979,7 @@ StatisticsToadlet.totalOutput=Total envoyé (global) : ${total}
 StatisticsToadlet.totalOutputSession=Total envoyé (session) : ${total} (${rate}/seconde)
 StatisticsToadlet.totalOverhead=Pas des requêtes: ${rate}/s (${percent}%).
 StatisticsToadlet.totalTime=Temps total
-StatisticsToadlet.transferBackoffReason=Transfère de la raison du Backoff
+StatisticsToadlet.transferBackoffReason=Raison de la temporisation (backoff) du transfert
 StatisticsToadlet.transferringRequests=Requêtes transférées : envoi ${senders}, réception ${receivers}
 StatisticsToadlet.uomBytes=Envoi de mises à jour : ${total}
 StatisticsToadlet.unaccountedBytes=Envoi restant : ${total} (${percent}%)
@@ -2005,7 +2005,7 @@ TextModeClientInterfaceServer.allowedHostsLong=Noms d'hôtes ou adresses IP qui 
 TextModeClientInterfaceServer.bindTo=Adresse IP où écouter
 TextModeClientInterfaceServer.bindToLong=Adresse IP où écouter
 TextModeClientInterfaceServer.enableInputOutput=Activer sur stdin/stdout ?
-TextModeClientInterfaceServer.enableInputOutputLong=Activer l'interface en mode texte ? (.enabled consiste à fournir une interface de style telnet, cela marche à travers une socket)
+TextModeClientInterfaceServer.enableInputOutputLong=Activer l'interface en mode texte ? (.enabled consiste à fournir une interface de style Telnet, cela marche à travers une socket)
 TextModeClientInterfaceServer.enabled=Activer TMCI ?
 TextModeClientInterfaceServer.enabledLong=Activer l'interface en mode texte
 TextModeClientInterfaceServer.ssl=Activer SSL ?
